Linked the index file to the stylesheet

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Sign-Up Form</title>
-        <link rel="stylesheet" href="sign_up_style.css">
+        <link rel="stylesheet" href="index_style.css">
     </head>
 
     <body>
