--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     your deepest dreams. <br>Sign up <em>now</em> to get started.
                 </h3>
 
-                <h3>You <em>know</em> you want to.</h3>
+                <h3 class="youknow">You <em>know</em> you want to.</h3>
             </div>
 
             <div class="section2">
@@ -66,9 +66,9 @@
             </div>
 
             <div class="section3">
-                <button type="submit">Create Account</button>
+                <button type="submit"><b>Create Account</b></button>
 
-                <p>Already have an account?</p>
+                <p>Already have an account? <strong>Log in</strong></p>
             </div>
         </div>
     </body>
